cambios_index_jc

--- a/index.html
+++ b/index.html
@@ -53,18 +53,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                     <div class="col-md-6 top-left">
                         <ul>
-                            <li><i class="fa fa-mobile" aria-hidden="true"></i> +021 365 777</li>
-                            <li><i class="fa fa-map-marker" aria-hidden="true"></i> 132 New Lenox, 868 1st Avenue </li>
+                            <li><i class="fa fa-mobile" aria-hidden="true"></i> +593 985 78 4658</li>
+                            <li><i class="fa fa-map-marker" aria-hidden="true"></i> Quito, Ecuador </li>
                         </ul>
                     </div>
-                    <div class="col-md-6 top-middle">
-                        <ul>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
+
                     <div class="clearfix"></div>
 
                 </div>
@@ -88,8 +81,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <ul class="nav navbar-nav">
                                         <li class="active"><a href="index.html">Home</a></li>
                                         <li><a href="about.html">About</a></li>
-                                        <li><a href="services.html">Services</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
+
                                         <li class="dropdown">
                                             <a href="#" class="dropdown-toggle" data-hover="Pages" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
                                             <ul class="dropdown-menu">
@@ -110,7 +102,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <!-- w3-banner -->
             <div class="w3-banner">
                 <div id="typer"></div>
-                <p>Praesent sit amet fermentum ipsum. Cras dictum ante nec metus pretium, placerat hendrerit ex facilisis. Ut sed neque sem. Ut ipsum dolor, dapibus et imperdiet nec, ultricies non metus.</p>
+                <p>INFORMACION DEL PROYECTO</p>
             </div>
 
             <!-- //w3-banner -->
@@ -503,7 +495,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         var win = $(window),
             foo = $('#typer');
 
-        foo.typer(['Trucking and Freight Transport', 'YOUR NAVIGATOR IN THE TRADE WORLD', 'QUALITY SERVICE AFFORDABLE PRICE']);
+        //foo.typer(['Trucking and Freight Transport', 'YOUR NAVIGATOR IN THE TRADE WORLD', 'QUALITY SERVICE AFFORDABLE PRICE']);
 
         // unneeded...
         win.resize(function() {
