--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+</head>
+
+<head>
     <title>CONCESIONARIA</title>
     <!-- custom-theme -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
