--- a/typography.html
+++ b/typography.html
@@ -1,6 +1,6 @@
 <!--
-author: W3layouts
-author URL: http://w3layouts.com
+author: Grupo4
+author URL: http://Grupo4.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
@@ -8,11 +8,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="en">
 
 <head>
-    <title>Hauling a Transportation Category Flat Bootstrap Responsive Website Template | Typography :: w3layouts</title>
+    <title>CONCESIONARIA a Transportation Category Flat Bootstrap Responsive Website Template | Typography :: Grupo4</title>
     <!-- custom-theme -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="Hauling Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+    <meta name="keywords" content="CONCESIONARIA Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
     <script type="application/x-javascript">
         addEventListener("load", function() {
@@ -49,8 +49,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                     <div class="col-md-6 top-left">
                         <ul>
-                            <li><i class="fa fa-mobile" aria-hidden="true"></i> +021 365 777</li>
-                            <li><i class="fa fa-map-marker" aria-hidden="true"></i> 132 New Lenox, 868 1st Avenue </li>
+                            <li><i class="fa fa-mobile" aria-hidden="true"></i> +593 985 78 4658</li>
+                            <li><i class="fa fa-map-marker" aria-hidden="true"></i> Quito, Ecuador </li>
                         </ul>
                     </div>
                     <div class="col-md-6 top-middle">
@@ -76,7 +76,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<span class="icon-bar"></span>
 									<span class="icon-bar"></span>
 								</button>
-                                <h1><a class="navbar-brand" href="index.html">Hauling</span></a></h1>
+                                <h1><a class="navbar-brand" href="index.html">CONCESIONARIA</span></a></h1>
                             </div>
                             <!-- Collect the nav links, forms, and other content for toggling -->
                             <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
@@ -111,7 +111,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="container">
             <h3 class="w3l-titles">Typography</h3>
             <p class="w3ls-p">Donec semper rutrum ipsum et bibendum. Sed condimentum dolor velit semper rutrum ipsum et velit semper bibendum.</p>
-            <div class="grid_3 grid_4 w3layouts">
+            <div class="grid_3 grid_4 Grupo4">
                 <h3 class="hdg">Headings</h3>
                 <div class="bs-example">
                     <table class="table">
@@ -294,7 +294,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <div class="grid_3 grid_5 wthree">
                 <h3>Badges</h3>
-                <div class="col-md-6 agileits-w3layouts">
+                <div class="col-md-6 agileits-Grupo4">
                     <p>Add modifier classes to change the appearance of a badge.</p>
                     <table class="table table-bordered">
                         <thead>
@@ -374,28 +374,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li class="list-group-item1">Vestibulum at eros</li>
             </ol>
             <h3 class="bars">Forms</h3>
-            <div class="input-group w3_w3layouts">
+            <div class="input-group w3_Grupo4">
                 <span class="input-group-addon" id="basic-addon1">@</span>
                 <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
             </div>
-            <div class="input-group w3_w3layouts">
+            <div class="input-group w3_Grupo4">
                 <input type="text" class="form-control" placeholder="Recipient's username" aria-describedby="basic-addon2">
                 <span class="input-group-addon" id="basic-addon2">@example.com</span>
             </div>
-            <div class="input-group w3_w3layouts">
+            <div class="input-group w3_Grupo4">
                 <span class="input-group-addon">$</span>
                 <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
                 <span class="input-group-addon">.00</span>
             </div>
-            <div class="input-group input-group-lg w3_w3layouts">
+            <div class="input-group input-group-lg w3_Grupo4">
                 <span class="input-group-addon" id="sizing-addon1">@</span>
                 <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
             </div>
-            <div class="input-group w3_w3layouts">
+            <div class="input-group w3_Grupo4">
                 <span class="input-group-addon" id="sizing-addon2">@</span>
                 <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon2">
             </div>
-            <div class="input-group input-group-sm w3_w3layouts">
+            <div class="input-group input-group-sm w3_Grupo4">
                 <span class="input-group-addon" id="sizing-addon3">@</span>
                 <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon3">
             </div>
@@ -632,19 +632,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- footer -->
     <div class="footer">
         <div class="container">
-            <div class="agileits_w3layouts_footer_grids">
-                <div class="col-md-4 agileits_w3layouts_footer_grid">
+            <div class="agileits_Grupo4_footer_grids">
+                <div class="col-md-4 agileits_Grupo4_footer_grid">
                     <h3>Call Us Now</h3>
                     <ul>
                         <li><span>Office Phone :</span> (+123) 2302 232</li>
                         <li><span>Fax :</span> (+123) 123 456 455</li>
                     </ul>
                 </div>
-                <div class="col-md-4 agileits_w3layouts_footer_grid">
+                <div class="col-md-4 agileits_Grupo4_footer_grid">
                     <h3>Address</h3>
-                    <p>132 New Lenox, 868 1st Avenue <i>4th United States.</i></p>
+                    <p>Quito, Ecuador <i>Av. y Av. Rumichaca Ñan, Av. Moran Valverde, Quito 170146</i></p>
                 </div>
-                <div class="col-md-4 agileits_w3layouts_footer_grid">
+                <div class="col-md-4 agileits_Grupo4_footer_grid">
                     <h3>send a message</h3>
                     <ul>
                         <li><span>Email :</span> <a href="mailto:info@example.com">info@example1.com</a></li>
@@ -653,27 +653,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
                 <div class="clearfix"> </div>
             </div>
-            <div class="w3_agileits_footer_grids">
-                <div class="col-md-4 w3_agileits_footer_grid">
-                    <p>Nulla ex dolor, elementum sit amet placerat at, pretium in tortor. Vestibulum lacinia arcu quis lacus sollicitudin condimentum. Ut ac aliquet ex.</p>
-                </div>
-                <div class="col-md-4 w3_agileits_footer_grid">
-                    <h3>Hours Work</h3>
-                    <h4>Offices are opened</h4>
-                    <ul>
-                        <li><span>Mon - Fri : </span> 9:00 AM to 5:00PM</li>
-                        <li><span>Sat : </span> 10:00 AM to 3:00PM</li>
-                    </ul>
-                </div>
-                <div class="col-md-4 w3_agileits_footer_grid">
-                    <h3>Subscribe Now</h3>
-                    <form action="#" method="post">
-                        <input type="email" name="Email" placeholder="Email" required="">
-                        <input type="submit" value="Submit ">
-                    </form>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
+
         </div>
     </div>
     <div class="wthree_copy_right copyright">
@@ -686,7 +666,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <li><a class="facebook" href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
-            <p>© 2018 Hauling. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+            <p>© 2018 CONCESIONARIA. All rights reserved | Design by <a href="http://Grupo4.com/">Grupo4</a></p>
         </div>
     </div>
     <!-- //footer -->
@@ -695,7 +675,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    Hauling
+                    CONCESIONARIA
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
