--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <title>CONCESIONARIA</title>
@@ -53,13 +53,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                     <div class="col-md-6 top-left">
                         <ul>
-                            <li><i class="fa fa-mobile" aria-hidden="true"></i> +593 985 78 4658</li>
+                            <li><i class="fa fa-mobile" aria-hidden="true"></i> +593 985 78 4658 </li>
                             <li><i class="fa fa-map-marker" aria-hidden="true"></i> Quito, Ecuador </li>
                         </ul>
                     </div>
-
-                    <div class="clearfix"></div>
-
                 </div>
             </div>
             <div class="top-bar">
@@ -73,7 +70,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<span class="icon-bar"></span>
 									<span class="icon-bar"></span>
 								</button>
-                                <h1><a class="navbar-brand" href="index.html">CONCESIONARIA</span></a></h1>
+                                <h1><a class="navbar-brand" href="index.html">Concesionaria Latinoamericana</span></a></h1>
                             </div>
                             <!-- Collect the nav links, forms, and other content for toggling -->
                             <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
@@ -102,7 +99,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <!-- w3-banner -->
             <div class="w3-banner">
                 <div id="typer"></div>
-                <p>INFORMACION DEL PROYECTO</p>
+                <p>CONCESIONARIA PICHINCHA</p>
             </div>
 
             <!-- //w3-banner -->
@@ -113,7 +110,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="about">
         <div class="container">
 
-            <h2 class="w3l-titles">Welcome</h2>
+            <h2 class="w3l-titles">Bienvenidos</h2>
             <div class="w3l-about-grids">
                 <div class="col-md-6 w3ls-about-left">
                     <div class="agileits-icon-grid">
