--- a/contact.html
+++ b/contact.html
@@ -149,53 +149,33 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </section>
     <!-- map -->
     <div class="w3l-map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d10446319.224363243!2d-101.53641366492933!3d40.52127641868563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1509778660321" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.7703527930016!2d-78.55105408517025!3d-0.28095403543505754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d598bc74cfdde9%3A0x3aa0abc8cae34aa2!2sAv.%20Moran%20Valverde%20%26%20Av.%20Rumichaca%20%C3%91an%2C%20Quito!5e0!3m2!1ses!2sec!4v1642537381751!5m2!1ses!2sec"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
     <!-- footer -->
     <div class="footer">
         <div class="container">
-            <div class="agileits_w3layouts_footer_grids">
-                <div class="col-md-4 agileits_w3layouts_footer_grid">
-                    <h3>Call Us Now</h3>
+            <div class="agileits_Grupo4_footer_grids">
+                <div class="col-md-4 agileits_Grupo4_footer_grid">
+                    <h3>Llámanos Ahora</h3>
                     <ul>
-                        <li><span>Office Phone :</span> (+123) 2302 232</li>
-                        <li><span>Fax :</span> (+123) 123 456 455</li>
+                        <li><span>Teléfono Oficina :</span> (+593) 2302 232</li>
+                        <li><span>Fax :</span> (+593) 123 456 455</li>
                     </ul>
                 </div>
-                <div class="col-md-4 agileits_w3layouts_footer_grid">
-                    <h3>Address</h3>
-                    <p>132 New Lenox, 868 1st Avenue <i>4th United States.</i></p>
+                <div class="col-md-4 agileits_Grupo4_footer_grid">
+                    <h3>Dirección</h3>
+                    <p>Quito, Ecuador <i>Av. Morán Valverde y Rumichaca Ñan</i></p>
                 </div>
-                <div class="col-md-4 agileits_w3layouts_footer_grid">
-                    <h3>send a message</h3>
+                <div class="col-md-4 agileits_Grupo4_footer_grid">
+                    <h3>Enviar un correo</h3>
                     <ul>
-                        <li><span>Email :</span> <a href="mailto:info@example.com">info@example1.com</a></li>
-                        <li><span>Enquiry :</span> <a href="mailto:info@enquiry.com">info@enquiry.com</a></li>
+                        <li><span>Correo electrónico:</span> <a href="mailto:joselyncherrez27@hotmail.com">info@concelatam.com</a></li>
                     </ul>
                 </div>
                 <div class="clearfix"> </div>
             </div>
-            <div class="w3_agileits_footer_grids">
-                <div class="col-md-4 w3_agileits_footer_grid">
-                    <p>Nulla ex dolor, elementum sit amet placerat at, pretium in tortor. Vestibulum lacinia arcu quis lacus sollicitudin condimentum. Ut ac aliquet ex.</p>
-                </div>
-                <div class="col-md-4 w3_agileits_footer_grid">
-                    <h3>Hours Work</h3>
-                    <h4>Offices are opened</h4>
-                    <ul>
-                        <li><span>Mon - Fri : </span> 9:00 AM to 5:00PM</li>
-                        <li><span>Sat : </span> 10:00 AM to 3:00PM</li>
-                    </ul>
-                </div>
-                <div class="col-md-4 w3_agileits_footer_grid">
-                    <h3>Subscribe Now</h3>
-                    <form action="#" method="post">
-                        <input type="email" name="Email" placeholder="Email" required="">
-                        <input type="submit" value="Submit ">
-                    </form>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
+
         </div>
     </div>
     <div class="wthree_copy_right copyright">
@@ -208,7 +188,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <li><a class="facebook" href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
-            <p>© 2018 Hauling. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+            <p>© 2018 CONCESIONARIA. All rights reserved | Design by <a href="http://Grupo4.com/">Grupo4</a></p>
         </div>
     </div>
     <!-- //footer -->
