--- a/about.html
+++ b/about.html
@@ -234,34 +234,27 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- footer -->
     <div class="footer">
         <div class="container">
-            <div class="agileits_w3layouts_footer_grids">
-                <div class="col-md-4 agileits_w3layouts_footer_grid">
-                    <h3>Llámanos ahora</h3>
+            <div class="agileits_Grupo4_footer_grids">
+                <div class="col-md-4 agileits_Grupo4_footer_grid">
+                    <h3>Llámanos Ahora</h3>
                     <ul>
                         <li><span>Teléfono Oficina :</span> (+593) 2302 232</li>
                         <li><span>Fax :</span> (+593) 123 456 455</li>
                     </ul>
                 </div>
-                <div class="col-md-4 agileits_w3layouts_footer_grid">
+                <div class="col-md-4 agileits_Grupo4_footer_grid">
                     <h3>Dirección</h3>
-                    <p>Quito, Ecuador <i>Av.Moran Valverde y Av. Rumichaca</i></p>
+                    <p>Quito, Ecuador <i>Av. Morán Valverde y Rumichaca Ñan</i></p>
                 </div>
-                <div class="col-md-4 agileits_w3layouts_footer_grid">
-                    <h3>Enviar un mensaje</h3>
+                <div class="col-md-4 agileits_Grupo4_footer_grid">
+                    <h3>Enviar un correo</h3>
                     <ul>
-                        <li><span>Correo Electrónico</span> <a href="mailto:info@example.com">info@example1.com</a></li>
-
+                        <li><span>Correo electrónico:</span> <a href="mailto:joselyncherrez27@hotmail.com">info@concelatam.com</a></li>
                     </ul>
                 </div>
                 <div class="clearfix"> </div>
             </div>
-            <div class="w3_agileits_footer_grids">
-                <div class="col-md-4 w3_agileits_footer_grid">
-                    <p>Nuestro compromiso...</p>
-                </div>
 
-                <div class="clearfix"> </div>
-            </div>
         </div>
     </div>
     <div class="wthree_copy_right copyright">
@@ -274,7 +267,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <li><a class="facebook" href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
-            <p>© Concesionaria Pichincha. Todos los derechos reservador </p>
+            <p>© 2018 CONCESIONARIA. All rights reserved | Design by <a href="http://Grupo4.com/">Grupo4</a></p>
         </div>
     </div>
     <!-- //footer -->
