--- a/about.html
+++ b/about.html
@@ -177,10 +177,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <div class="agileinfo-team-grids">
                 <div class="col-md-3 wthree-team-grid">
-                    <img src="images/t1.jpg" alt="">
+                    <img src="images/josselyn.png" alt="">
                     <div class="wthree-team-grid-info">
                         <h4>Integrante 1</h4>
-                        <p>Integrante</p>
+                        <p>Josselyn Chérres</p>
                         <div class="team-social-grids">
                             <ul>
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -191,10 +191,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                 </div>
                 <div class="col-md-3 wthree-team-grid">
-                    <img src="images/t2.jpg" alt="">
+                    <img src="images/camila.png" alt="">
                     <div class="wthree-team-grid-info">
                         <h4>Integrante 2</h4>
-                        <p>Integrante</p>
+                        <p>Camila Cedeño</p>
                         <div class="team-social-grids">
                             <ul>
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -205,10 +205,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                 </div>
                 <div class="col-md-3 wthree-team-grid">
-                    <img src="images/t3.jpg" alt="">
+                    <img src="images/hector.png" alt="">
                     <div class="wthree-team-grid-info">
                         <h4>Integrante 3</h4>
-                        <p>Integrante</p>
+                        <p>Hector Ubillus</p>
                         <div class="team-social-grids">
                             <ul>
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -219,14 +219,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                 </div>
                 <div class="col-md-3 wthree-team-grid">
-                    <img src="images/t4.jpg" alt="">
+                    <img src="images/JonathanGuerra.PNG" alt="">
                     <div class="wthree-team-grid-info">
                         <h4>Integrante 4</h4>
-                        <p>Integrante</p>
+                        <p>Jonathan Guerra</p>
                         <div class="team-social-grids">
                             <ul>
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="https://www.facebook.com/jonathan.guerra.1234/"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://www.instagram.com/jonathanguerra_c/"><i class="fa fa-instagram"></i></a></li>
                                 <li><a href="#"><i class="fa fa-rss"></i></a></li>
                             </ul>
                         </div>
