--- a/icons.html
+++ b/icons.html
@@ -410,7 +410,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                                     <div class="icon-box col-md-3 col-sm-4"><a class="agile-icon" href="#"><i class="fa fa-info"></i> fa-info</a></div>
 
-                                    <div class="icon-box col-md-3 col-sm-4"><a class="agile-icon" href="#info-circle"><i class="fa fa-info-circle"></i> fa-info-circle</a></div>
+                                    <div class="icon-box col-md-3 col-sm-4"><a class="agile-icon" href="#info-circle"><i class="fo-circle"></i> fa-info-circle</a></div>
 
                                     <div class="icon-box col-md-3 col-sm-4"><a class="agile-icon" href="#key"><i class="fa fa-key"></i> fa-key</a></div>
 
@@ -1050,7 +1050,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                                         <div class="icon-box col-md-3 col-sm-4"><a class="agile-icon" href="#html5"><i class="fa fa-html5"></i> fa-html5</a></div>
 
-                                        <div class="icon-box col-md-3 col-sm-4"><a class="agile-icon" href="#instagram"><i class="fa fa-instagram"></i> fa-instagram</a></div>
+                                        <div class="icon-box col-md-3 col-sm-4"><a class="agile-icon" href="#instagram"><i class="tagram"></i> fa-instagram</a></div>
 
                                         <div class="icon-box col-md-3 col-sm-4"><a class="agile-icon" href="#linkedin"><i class="fa fa-linkedin"></i> fa-linkedin</a></div>
 
