--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<span class="icon-bar"></span>
 									<span class="icon-bar"></span>
 								</button>
-                                <h1><a class="navbar-brand" href="index.html">CONCESIONARIA</span></a></h1>
+                                <h1><a class="navbar-brand" href="index.html">CONCESIONARIO</span></a></h1>
                             </div>
                             <!-- Collect the nav links, forms, and other content for toggling -->
                             <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
