--- a/typography.html
+++ b/typography.html
@@ -5,7 +5,7 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <title>CONCESIONARIA a Transportation Category Flat Bootstrap Responsive Website Template | Typography :: Grupo4</title>
