--- a/index.html
+++ b/index.html
@@ -306,21 +306,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="container">
             <div class="agileits_Grupo4_footer_grids">
                 <div class="col-md-4 agileits_Grupo4_footer_grid">
-                    <h3>Call Us Now</h3>
+                    <h3>Llámanos Ahora</h3>
                     <ul>
-                        <li><span>Office Phone :</span> (+123) 2302 232</li>
-                        <li><span>Fax :</span> (+123) 123 456 455</li>
+                        <li><span>Teléfono Oficina :</span> (+593) 2302 232</li>
+                        <li><span>Fax :</span> (+593) 123 456 455</li>
                     </ul>
                 </div>
                 <div class="col-md-4 agileits_Grupo4_footer_grid">
-                    <h3>Address</h3>
-                    <p>Quito, Ecuador <i>Av. y Av. Rumichaca Ñan, Av. Moran Valverde, Quito 170146</i></p>
+                    <h3>Dirección</h3>
+                    <p>Quito, Ecuador <i>Av. Morán Valverde y Rumichaca Ñan</i></p>
                 </div>
                 <div class="col-md-4 agileits_Grupo4_footer_grid">
-                    <h3>send a message</h3>
+                    <h3>Enviar un correo</h3>
                     <ul>
-                        <li><span>Email :</span> <a href="mailto:info@example.com">info@example1.com</a></li>
-                        <li><span>Enquiry :</span> <a href="mailto:info@enquiry.com">info@enquiry.com</a></li>
+                        <li><span>Correo electrónico:</span> <a href="mailto:joselyncherrez27@hotmail.com">info@concelatam.com</a></li>
                     </ul>
                 </div>
                 <div class="clearfix"> </div>
