--- a/index.html
+++ b/index.html
@@ -114,213 +114,45 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="w3l-about-grids">
                 <div class="col-md-6 w3ls-about-left">
                     <div class="agileits-icon-grid">
-                        <div class="icon-left hvr-radial-out">
-                            <i class="fa fa-smile-o" aria-hidden="true"></i>
-                        </div>
+
                         <div class="icon-right">
-                            <h5>100% SATISFIED CUSTOMERS</h5>
-                            <p>Phasellus dapibus felis elit, sed accumsan arcu gravida vitae. Nullam aliquam erat at lectus ullamcorper, nec interdum neque hendrerit.</p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
                     <div class="agileits-icon-grid">
-                        <div class="icon-left hvr-radial-out">
-                            <i class="fa fa-usd" aria-hidden="true"></i>
-                        </div>
                         <div class="icon-right">
-                            <h5>QUALITY SERVICE AFFORDABLE PRICE</h5>
-                            <p>Phasellus dapibus felis elit, sed accumsan arcu gravida vitae. Nullam aliquam erat at lectus ullamcorper, nec interdum neque hendrerit.</p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
                     <div class="agileits-icon-grid">
-                        <div class="icon-left hvr-radial-out">
-                            <i class="fa fa-globe" aria-hidden="true"></i>
-                        </div>
-                        <div class="icon-right">
-                            <h5>WORLDWIDE LOCATIONS</h5>
-                            <p>Phasellus dapibus felis elit, sed accumsan arcu gravida vitae. Nullam aliquam erat at lectus ullamcorper, nec interdum neque hendrerit.</p>
-                        </div>
                         <div class="clearfix"> </div>
                     </div>
                 </div>
                 <div class="col-md-6 w3ls-about-right">
-                    <div class="w3ls-about-right-img">
-
-                    </div>
                 </div>
                 <div class="clearfix"> </div>
             </div>
         </div>
     </div>
-    <!-- //about -->
-    <!-- counter -->
-    <div class="services-bottom stats services">
-        <div class="banner-dott1">
-            <div class="container">
-
-                <div class="wthree-agile-counter">
-                    <div class="col-md-3 w3_agile_stats_grid-top">
-                        <div class="w3_agile_stats_grid">
-                            <div class="agile_count_grid_left">
-                                <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
-                            </div>
-                            <div class="agile_count_grid_right">
-                                <p class="counter">324</p>
-                            </div>
-                            <div class="clearfix"> </div>
-                            <h4>Transport</h4>
-                        </div>
-                    </div>
-                    <div class="col-md-3 w3_agile_stats_grid-top">
-                        <div class="w3_agile_stats_grid">
-                            <div class="agile_count_grid_left">
-                                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                            </div>
-                            <div class="agile_count_grid_right">
-                                <p class="counter">543</p>
-                            </div>
-                            <div class="clearfix"> </div>
-                            <h4>Happy Clients</h4>
-                        </div>
-                    </div>
-                    <div class="col-md-3 w3_agile_stats_grid-top">
-                        <div class="w3_agile_stats_grid">
-                            <div class="agile_count_grid_left">
-                                <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
-                            </div>
-                            <div class="agile_count_grid_right">
-                                <p class="counter">434</p>
-                            </div>
-                            <div class="clearfix"> </div>
-                            <h4>People Loved</h4>
-                        </div>
-                    </div>
-                    <div class="col-md-3 w3_agile_stats_grid-top">
-                        <div class="w3_agile_stats_grid">
-                            <div class="agile_count_grid_left">
-                                <span class="fa fa-trophy" aria-hidden="true"></span>
-                            </div>
-                            <div class="agile_count_grid_right">
-                                <p class="counter">234</p>
-                            </div>
-                            <div class="clearfix"> </div>
-                            <h4>Win Awards</h4>
-                        </div>
-                    </div>
-                    <div class="clearfix"> </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- //counter -->
-    <!-- advantages -->
-    <div class="two-grids">
-        <div class="container">
-            <h3 class="w3l-titles">Advantages</h3>
-            <p class="Grupo4_dummy_para"> sed accumsan arcu gravida vitae. Nullam aliquam</p>
-            <div class="col-md-6 w3_two_grid_right">
-                <div class="w3_two_grid_right1">
-                    <div class="col-xs-3 w3_two_grid_right_grid">
-                        <div class="w3_two_grid_right_grid1">
-                            <i class="fa fa-hourglass-o" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                    <div class="col-xs-9 w3_two_grid_right_gridr">
-                        <h4>amet tellus</h4>
-                        <p>Suspendisse bibendum ex sit amet tellus finibus ultrices.</p>
-                    </div>
-                    <div class="clearfix"> </div>
-                </div>
-                <div class="w3_two_grid_right1">
-                    <div class="col-xs-3 w3_two_grid_right_grid">
-                        <div class="w3_two_grid_right_grid1">
-                            <i class="fa fa-clone" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                    <div class="col-xs-9 w3_two_grid_right_gridr">
-                        <h4>finibus ultrices</h4>
-                        <p>Suspendisse bibendum ex sit amet tellus finibus ultrices.</p>
-                    </div>
-                    <div class="clearfix"> </div>
-                </div>
-                <div class="w3_two_grid_right1">
-                    <div class="col-xs-3 w3_two_grid_right_grid">
-                        <div class="w3_two_grid_right_grid1">
-                            <i class="fa fa-external-link" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                    <div class="col-xs-9 w3_two_grid_right_gridr">
-                        <h4>tellus finibus</h4>
-                        <p>Suspendisse bibendum ex sit amet tellus finibus ultrices.</p>
-                    </div>
-                    <div class="clearfix"> </div>
-                </div>
-            </div>
-            <div class="col-md-6 w3_two_grid_right">
-                <div class="w3_two_grid_right1">
-                    <div class="col-xs-3 w3_two_grid_right_grid">
-                        <div class="w3_two_grid_right_grid1">
-                            <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                    <div class="col-xs-9 w3_two_grid_right_gridr">
-                        <h4>bibendum ex</h4>
-                        <p>Suspendisse bibendum ex sit amet tellus finibus ultrices.</p>
-                    </div>
-                    <div class="clearfix"> </div>
-                </div>
-                <div class="w3_two_grid_right1">
-                    <div class="col-xs-3 w3_two_grid_right_grid">
-                        <div class="w3_two_grid_right_grid1">
-                            <i class="fa fa-check-square-o" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                    <div class="col-xs-9 w3_two_grid_right_gridr">
-                        <h4>sit amet</h4>
-                        <p>Suspendisse bibendum ex sit amet tellus finibus ultrices.</p>
-                    </div>
-                    <div class="clearfix"> </div>
-                </div>
-                <div class="w3_two_grid_right1">
-                    <div class="col-xs-3 w3_two_grid_right_grid">
-                        <div class="w3_two_grid_right_grid1">
-                            <i class="fa fa-square-o" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                    <div class="col-xs-9 w3_two_grid_right_gridr">
-                        <h4>tellus finibus</h4>
-                        <p>Suspendisse bibendum ex sit amet tellus finibus ultrices.</p>
-                    </div>
-                    <div class="clearfix"> </div>
-                </div>
-            </div>
-            <div class="clearfix"> </div>
-        </div>
-    </div>
-    <!-- //advantages -->
-
-    <!-- //Clients -->
     <!-- footer -->
     <div class="footer">
         <div class="container">
             <div class="agileits_Grupo4_footer_grids">
                 <div class="col-md-4 agileits_Grupo4_footer_grid">
-                    <h3>Call Us Now</h3>
+                    <h3>Llámanos Ahora</h3>
                     <ul>
-                        <li><span>Office Phone :</span> (+123) 2302 232</li>
-                        <li><span>Fax :</span> (+123) 123 456 455</li>
+                        <li><span>Teléfono Oficina :</span> (+593) 2302 232</li>
+                        <li><span>Fax :</span> (+593) 123 456 455</li>
                     </ul>
                 </div>
                 <div class="col-md-4 agileits_Grupo4_footer_grid">
-                    <h3>Address</h3>
-                    <p>Quito, Ecuador <i>Av. y Av. Rumichaca Ñan, Av. Moran Valverde, Quito 170146</i></p>
+                    <h3>Dirección</h3>
+                    <p>Quito, Ecuador <i>Av. Morán Valverde y Rumichaca Ñan</i></p>
                 </div>
                 <div class="col-md-4 agileits_Grupo4_footer_grid">
-                    <h3>send a message</h3>
+                    <h3>Enviar un correo</h3>
                     <ul>
-                        <li><span>Email :</span> <a href="mailto:info@example.com">info@example1.com</a></li>
-                        <li><span>Enquiry :</span> <a href="mailto:info@enquiry.com">info@enquiry.com</a></li>
+                        <li><span>Correo electrónico:</span> <a href="mailto:joselyncherrez27@hotmail.com">info@concelatam.com</a></li>
                     </ul>
                 </div>
                 <div class="clearfix"> </div>
@@ -347,7 +179,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    CONCESIONARIA
+                    Hauling
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
@@ -404,53 +236,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         });
     </script>
     <!-- //scrolling script -->
-
-    <!-- FlexSlider-JavaScript -->
-    <script defer src="js/jquery.flexslider.js"></script>
-    <script type="text/javascript">
-        $(function() {
-            SyntaxHighlighter.all();
-        });
-        $(window).load(function() {
-            $('.flexslider').flexslider({
-                animation: "slide",
-                start: function(slider) {
-                    $('body').removeClass('loading');
-                }
-            });
-        });
-    </script>
-    <!-- //FlexSlider-JavaScript -->
-
-    <!-- typer js-->
-    <!-- For banner text -->
-    <script src='js/jquery.typer.js'></script>
-    <script>
-        var win = $(window),
-            foo = $('#typer');
-
-        //foo.typer(['Trucking and Freight Transport', 'YOUR NAVIGATOR IN THE TRADE WORLD', 'QUALITY SERVICE AFFORDABLE PRICE']);
-
-        // unneeded...
-        win.resize(function() {
-            var fontSize = Math.max(Math.min(win.width() / (1 * 10), parseFloat(Number.POSITIVE_INFINITY)), parseFloat(Number.NEGATIVE_INFINITY));
-
-            foo.css({
-                fontSize: fontSize * .8 + 'px'
-            });
-        }).resize();
-    </script>
-    <!-- //typer js-->
-    <!-- //For banner text -->
-
-    <!-- stats -->
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.countup.js"></script>
-    <script>
-        $('.counter').countUp();
-    </script>
-    <!-- //stats -->
-
 </body>
 
 </html>
