--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                 </div>
                 <div class="col-md-3 wthree-team-grid">
-                    <img src="images/camila.png" alt="">
+                    <img src="images/camila.jpg" alt="">
                     <div class="wthree-team-grid-info">
                         <h4>Integrante 2</h4>
                         <p>Camila Cedeño</p>
