--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE html>
-<html lang="e">
+<html lang="es">
 
 <head>
     <title>CONCESIONARIA | ABOUT</title>
@@ -103,7 +103,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="container">
             <div class="w3ls-heading">
                 <h2 class="w3l-titles">Sobre nosotros...</h2>
-                <p class="w3layouts_dummy_para">..............................</p>
+                <p class="w3layouts_dummy_para"></p>
             </div>
             <div class="ab-agile">
                 <div class="col-md-5 ab-pic">
@@ -166,7 +166,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="container">
             <div class="w3ls-heading">
                 <h3 class="w3l-titles">Desarrolladores</h3>
-                <p class="w3layouts_dummy_para">Morbi in dui pretium, finibus sapien vel.</p>
+
             </div>
             <div class="agileinfo-team-grids">
                 <div class="col-md-3 wthree-team-grid">
@@ -177,9 +177,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                         <div class="team-social-grids">
                             <ul>
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-rss"></i></a></li>
+                                <li><a href="https://www.facebook.com/joselyn.cherrez.940" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://www.instagram.com/selin.ch27/?hl=es" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                                <li><a href="https://github.com/Joselyncherrez" target="_blank"><i class="fa fa-github"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -192,9 +192,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                         <div class="team-social-grids">
                             <ul>
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-rss"></i></a></li>
+                                <li><a href="https://www.facebook.com/camila.cedeno.754" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://www.instagram.com/saritacastro4/?hl=es" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                                <li><a href="https://github.com/camicodes" target="_blank"><i class="fa fa-github"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -207,9 +207,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                         <div class="team-social-grids">
                             <ul>
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-rss"></i></a></li>
+                                <li><a href="#"><i class="fa fa-facebook"target="_blank"></i></a></li>
+                                <li><a href="#"><i class="fa fa-instagram"target="_blank"></i></a></li>
+                                <li><a href="https://github.com/punkevader" target="_blank"><i class="fa fa-github"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -222,9 +222,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                         <div class="team-social-grids">
                             <ul>
-                                <li><a href="https://www.facebook.com/jonathan.guerra.1234/"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="https://www.instagram.com/jonathanguerra_c/"><i class="fa fa-instagram"></i></a></li>
-                                <li><a href="#"><i class="fa fa-rss"></i></a></li>
+                                <li><a href="https://www.facebook.com/jonathan.guerra.1234/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://www.instagram.com/jonathanguerra_c/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                                <li><a href="https://github.com/ElJoesPro" target="_blank"><i class="fa fa-github"></i></a></li>
                             </ul>
                         </div>
                     </div>
