agregar_cuentas_jc

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <li><i class="fa fa-map-marker" aria-hidden="true"></i> Quito, Ecuador </li>
                         </ul>
                     </div>
+                    <div class="col-md-6 top-middle">
+                        <ul>
+                            <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://twitter.com/concesionaria_l" target="_blank"><i class="fa fa-twitter"></i></a></li>
 
+                        </ul>
+                    </div>
                     <div class="clearfix"></div>
 
                 </div>
@@ -141,7 +147,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="col-lg-6 col-md-6 col-sm-6 contact-w3-agile1" data-aos="flip-right">
                     <h4 class="w3l-contact"></h4>
                     <p class="contact-agile1"><strong>Teléfono :</strong> (+593) 2302 232</p>
-                    <p class="contact-agile1"><strong>Correo Electrónico :</strong> <a href="mailto:joselyncherrez27@hotmail.com">info@concelatam.com</a></p>
+                    <p class="contact-agile1"><strong>Correo Electrónico :</strong> <a href="mailto:concesionarialatinoamericana@gmail.com">info@concelatam.com</a></p>
                     <p class="contact-agile1"><strong>Dirección :</strong> Quito, Ecuador | Av. Morán Valverde y Rumichaca</p>
 
                 </div>
@@ -172,7 +178,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="col-md-4 agileits_Grupo4_footer_grid">
                     <h3>Enviar un correo</h3>
                     <ul>
-                        <li><span>Correo electrónico:</span> <a href="mailto:joselyncherrez27@hotmail.com">info@concelatam.com</a></li>
+                        <li><span>Correo electrónico:</span> <a href="mailto:concesionarialatinoamericana@gmail.com">info@concelatam.com</a></li>
                     </ul>
                 </div>
                 <div class="clearfix"> </div>
@@ -184,13 +190,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="container">
             <div class="copyrighttop">
                 <ul>
-                    <li><a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a class="facebook" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a class="facebook" href="#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a class="facebook" href="https://twitter.com/concesionaria_l" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                     <li><a class="facebook" href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
                     <li><a class="facebook" href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
-            <p>© 2018 CONCESIONARIA. All rights reserved | Design by <a href="http://Grupo4.com/">Grupo4</a></p>
+            <p>© 2022 CONCESIONARIA. All rights reserved | Design by <a href="http://Grupo4.com/">Grupo4</a></p>
         </div>
     </div>
     <!-- //footer -->
