--- a/about.html
+++ b/about.html
@@ -53,7 +53,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <li><i class="fa fa-map-marker" aria-hidden="true"></i> Quito, Ecuador </li>
                         </ul>
                     </div>
+                    <div class="col-md-6 top-middle">
+                        <ul>
+                            <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://twitter.com/concesionaria_l" target="_blank"><i class="fa fa-twitter"></i></a></li>
 
+                        </ul>
+                    </div>
                     <div class="clearfix"></div>
 
                 </div>
@@ -253,7 +259,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="col-md-4 agileits_Grupo4_footer_grid">
                     <h3>Enviar un correo</h3>
                     <ul>
-                        <li><span>Correo electrónico:</span> <a href="mailto:joselyncherrez27@hotmail.com">info@concelatam.com</a></li>
+                        <li><span>Correo electrónico:</span> <a href="mailto:concesionarialatinoamericana@gmail.com">info@concelatam.com</a></li>
                     </ul>
                 </div>
                 <div class="clearfix"> </div>
@@ -265,13 +271,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="container">
             <div class="copyrighttop">
                 <ul>
-                    <li><a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a class="facebook" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a class="facebook" href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-                    <li><a class="facebook" href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                    <li><a class="facebook" href="#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a class="facebook" href="https://twitter.com/concesionaria_l" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a class="facebook" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+
                 </ul>
             </div>
-            <p>© 2018 CONCESIONARIA. All rights reserved | Design by <a href="http://Grupo4.com/">Grupo4</a></p>
+            <p>© 2022 CONCESIONARIA. All rights reserved | Design by <a href="http://Grupo4.com/">Grupo4</a></p>
         </div>
     </div>
     <!-- //footer -->
