--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 top-middle">
                         <ul>
-                            <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.facebook.com/profile.php?id=100077547752012" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="https://twitter.com/concesionaria_l" target="_blank"><i class="fa fa-twitter"></i></a></li>
 
                         </ul>
@@ -190,10 +190,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="container">
             <div class="copyrighttop">
                 <ul>
-                    <li><a class="facebook" href="#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a class="facebook" href="https://www.facebook.com/profile.php?id=100077547752012" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                     <li><a class="facebook" href="https://twitter.com/concesionaria_l" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a class="facebook" href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-                    <li><a class="facebook" href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                    <li><a class="facebook" href="https://www.instagram.com/concesionarialatinoamericana/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+
                 </ul>
             </div>
             <p>© 2022 CONCESIONARIA. All rights reserved | Design by <a href="http://Grupo4.com/">Grupo4</a></p>
