--- a/about.html
+++ b/about.html
@@ -82,9 +82,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <nav class="cl-effect-15" id="cl-effect-15">
                                     <ul class="nav navbar-nav">
                                         <li><a href="index.html">Home</a></li>
-                                        <li class="active"><a href="about.html">Acerca det</a></li>
+                                        <li class="active"><a href="about.html">Acerca de </a></li>
                                         <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-hover="Pages" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Iniciar Sesión <span class="caret"></span></a>
+                                            <a href="#" class="dropdown-toggle" data-hover="Iniciar Sesión" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Iniciar Sesión <span class="caret"></span></a>
                                             <ul class="dropdown-menu">
                                                 <li><a href="icons.html">Icons</a></li>
                                                 <li><a href="typography.html">Typography</a></li>
