--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                         <li><a href="about.html">Acerca de</a></li>
 
                                         <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-hover="Pages" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Iniciar Sesión <span class="caret"></span></a>
+                                            <a href="#" class="dropdown-toggle" data-hover="Iniciar Sesión" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Iniciar Sesión <span class="caret"></span></a>
                                             <ul class="dropdown-menu">
                                                 <li><a href="icons.html">Icons</a></li>
                                                 <li><a href="typography.html">Typography</a></li>
