--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                         <li class="dropdown">
                                             <a href="#" class="dropdown-toggle" data-hover="Iniciar Sesión" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Iniciar Sesión <span class="caret"></span></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="icons.html">Icons</a></li>
+                                                <li><a href="login.html">Login</a></li>
                                                 <li><a href="typography.html">Typography</a></li>
                                             </ul>
                                         </li>
@@ -281,24 +281,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
     </div>
     <!-- //footer -->
-    <!-- bootstrap-modal-pop-up -->
-    <div class="modal video-modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    CONSECIONARIA
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                </div>
-                <div class="modal-body">
-                    <img src="images/1.jpg" alt=" " class="img-responsive" />
-                    <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
-                        vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.
-                        <i>" Quis autem vel eum iure reprehenderit qui in ea voluptate velit 
-								esse quam nihil molestiae consequatur.</i></p>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- //bootstrap-modal-pop-up -->
     <!-- js -->
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
