--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <title>Concesionaria | Contacto</title>
@@ -89,7 +89,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <a href="#" class="dropdown-toggle" data-hover="Iniciar Sesión" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Iniciar Sesión <span class="caret"></span></a>
                                             <ul class="dropdown-menu">
                                                 <li>
-                                                    <a href="icons.html"></a>
+                                                    <a href="login.html">Login</a>
                                                 </li>
                                                 <li><a href="typography.html">Typography</a></li>
                                             </ul>
