--- a/typography.html
+++ b/typography.html
@@ -89,7 +89,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                         <li class="dropdown active">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="icons.html">Icons</a></li>
+                                                <li><a href="login.html">Login</a></li>
                                                 <li><a href="typography.html">Typography</a></li>
                                             </ul>
                                         </li>
